.kubernetes/web/web-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#tls
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: your-web-ip-name
spec:
  defaultBackend:
    service:
      name: "web-service"
      port:
        number: 3000
  # rules:
# - host: yourdomain.com
#   http:
#     paths:
#     - path: /*
#       pathType: ImplementationSpecific
#       backend:
#         service:
#           name: web-service
#           port:
#             number: 3000
